bugs on mobile screen

--- a/client/pages/list/list.scss
+++ b/client/pages/list/list.scss
@@ -44,6 +44,7 @@
         column-gap: 1rem;
         left: 1rem;
         width: 90vw;
+        bottom: 8rem;
     }
 
     @media screen and (min-width: 769px) and (max-width: 1200px) {
