--- a/client/src/components/ComboBox/CheckableComboBox.scss
+++ b/client/src/components/ComboBox/CheckableComboBox.scss
@@ -44,7 +44,13 @@
     box-sizing: border-box;
     max-height: 7.5rem;
 
-    @media screen and (min-width: 320px) and (max-width: 1200px) {
+    @media screen and (min-width: 320px) and (max-width: 768px) {
+        font-size: .7rem;
+        width: fit-content;
+        left: 0;
+    }
+
+    @media screen and (min-width: 769px) and (max-width: 1200px) {
         font-size: .7rem;
     }
 }
