--- a/client/src/components/Menu/Menu.scss
+++ b/client/src/components/Menu/Menu.scss
@@ -12,7 +12,7 @@
     color: var.$white;
 
     @media screen and (min-width: 320px) and (max-width: 768px) {
-        height: 20%;
+        height: 10%;
         width: 100vw;
         max-width: 100vw;
         grid-template-rows: 1fr 1fr;
